--- a/team_anjana.html
+++ b/team_anjana.html
@@ -46,7 +46,7 @@
         </video>
         <div
             style="width:70%; ;position: absolute; top: 50%; left: 50%; color: white; transform: translate(-50%, -50%);">
-            <h1 style="text-align: center; font-size: 52px;">Khadayat Gita Kumari</h1>
+            <h1 style="text-align: center; font-size: 52px;">Thapa Anjana</h1>
             <p style="font-size: 19px; text-align: center;">ERP - M25W0420</p>
         </div>
     </div>
