--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div
             style="width:70%; ;position: absolute; top: 50%; left: 50%; color: white; transform: translate(-50%, -50%);">
             <h1 style="text-align: center; font-size: 32px;">Team Project</h1>
-            <p style="font-size: 19px; text-align: center;">We are a team of three members working together to create a
+            <p style="font-size: 19px; text-align: center;">We are a team of four members working together to create a
                 simple and creative website using HTML and CSS.
                 Through this project, we learned how to design pages, style content, and work as a team.</p>
         </div>
@@ -122,6 +122,13 @@
 
 
         </div>
+        <div style="position: relative; text-align: right;">
+                    <button
+                        style="background-color: transparent; border: none; text-align: right; padding: 20px; cursor: pointer; padding-right: 40px; font-size: 25px; font-weight: bold;"><a
+                            href="team.html">All Our Teams</button>
+                    <img src="./files/icons/seemore.png" alt="Icon_Seemore"
+                        style="position: absolute; right: 0; width: 40px;"></a>
+                </div>
     </div>
 
     <!-- Video and Audio -->
