--- a/team.html
+++ b/team.html
@@ -186,7 +186,7 @@
                     <tr>
                         <td>Nepal</td>
                         <td>+81 9054837246</td>
-                        <td>exploring new places,watching movies, gardening, reading books</td>
+                        <td>exploring new places,watching movies, reading books</td>
                     </tr>
 
                 </table>
