--- a/team_anjila.html
+++ b/team_anjila.html
@@ -88,6 +88,9 @@
                         <td>+81 8021102537</td>
                         <td>Travelling new places , watching movies and cooking foods</td>
                     </tr>
+                    <tr >
+                        <td colspan="3">Work experience : Accountant at daisy international Pvt ltd - 2 YRS</td>
+                    </tr>
 
                 </table>
 
