--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div style="position: relative; text-align: right;">
                     <button
                         style="background-color: transparent; border: none; text-align: right; padding: 20px; cursor: pointer; padding-right: 40px; font-size: 25px; font-weight: bold;"><a
-                            href="team.html">All Our Teams</button>
+                            href="team.html">Our Team Members</button>
                     <img src="./files/icons/seemore.png" alt="Icon_Seemore"
                         style="position: absolute; right: 0; width: 40px;"></a>
                 </div>
