--- a/team_anjana.html
+++ b/team_anjana.html
@@ -86,7 +86,10 @@
                     <tr>
                        <td>Nepal</td>
                         <td>+81 9054837246</td>
-                        <td>exploring new places,watching movies, gardening, reading books</td>
+                        <td>exploring new places,watching movies,reading books</td>
+                    </tr>
+                    <tr >
+                        <td colspan="3">Work experience : Data Entry - 2 YRS</td>
                     </tr>
 
                 </table>
