--- a/team_gita.html
+++ b/team_gita.html
@@ -90,6 +90,9 @@
                         <td>+81 7053455750</td>
                         <td>exploring new places,watching movies, gardening, reading books</td>
                     </tr>
+                    <tr >
+                        <td colspan="3">Work experience : Banking Experience - 8 YRS</td>
+                    </tr>
 
                 </table>
 
