--- a/team_anjila.html
+++ b/team_anjila.html
@@ -93,6 +93,13 @@
                     </tr>
 
                 </table>
+                <div style="position: relative; text-align: right;">
+                    <button
+                        style="background-color: transparent; border: none; text-align: right; padding: 20px; cursor: pointer; padding-right: 40px; font-size: 25px; font-weight: bold;"><a
+                            href="team.html">Project Team Members</button>
+                    <img src="./files/icons/seemore.png" alt="Icon_Seemore"
+                        style="position: absolute; right: 0; width: 40px;"></a>
+                </div>
 
             </div>
 
