--- a/team_keshab.html
+++ b/team_keshab.html
@@ -87,10 +87,17 @@
                     <tr>
                         <td>Nepal</td>
                         <td>+977 9851274815</td>
-                        <td>Playing Football , Travling</td>
+                        <td>Playing Football , Travling and Exploring New Technologies</td>
                     </tr>
 
                 </table>
+                <div style="position: relative; text-align: right;">
+                    <button
+                        style="background-color: transparent; border: none; text-align: right; padding: 20px; cursor: pointer; padding-right: 40px; font-size: 25px; font-weight: bold;"><a
+                            href="team.html">Project Team Members</button>
+                    <img src="./files/icons/seemore.png" alt="Icon_Seemore"
+                        style="position: absolute; right: 0; width: 40px;"></a>
+                </div>
 
             </div>
 
