--- a/team_anjila.html
+++ b/team_anjila.html
@@ -89,7 +89,7 @@
                         <td>Travelling new places , watching movies and cooking foods</td>
                     </tr>
                     <tr >
-                        <td colspan="3">Work experience : Accountant at daisy international Pvt ltd - 2 YRS</td>
+                        <td colspan="3">Work experience : Reliance Finance Limited (Banking) - 8 YRS</td>
                     </tr>
 
                 </table>
