--- a/team_gita.html
+++ b/team_gita.html
@@ -91,7 +91,7 @@
                         <td>exploring new places,watching movies, gardening, reading books</td>
                     </tr>
                     <tr >
-                        <td colspan="3">Work experience : Banking Experience - 8 YRS</td>
+                        <td colspan="3">Work experience : Accountant at daisy international Pvt ltd - 8 YRS</td>
                     </tr>
 
                 </table>
