--- a/team_gita.html
+++ b/team_gita.html
@@ -140,7 +140,7 @@
     <!-- Footer Section -->
     <div style="text-align: center; padding: 0 30px">
         <hr style="width: 85%;">
-        <h3 style="padding: 20px 0 10px;">@ 2025 Web Programming 1 (E1) — Student Group: New Group 2</h3>
+        <h3 style="padding: 20px 0 10px;">&copy; 2025 Web Programming 1 (E1) — Student Group: New Group 2</h3>
     </div>
 
 </body>
